@@ -134,6 +134,7 @@ Other Contributors (code, ideas, testing..):
 * Andre Arpin
 * Steve Beaudoin
 * Denis Bradford
+* bulklodd <bulklodd@users.sourceforge.net>
 * Adam Carrivick
 * Hern Chen
 * Jeremy Dewey
