@@ -7,6 +7,7 @@ WinMerge 2.13.6
   Show deleted differences in difference highlight with own
     color (#2669526)
   Disable folder compare tree-view by default (#2714968)
+  Allow setting codepage from command line (#2725549)
   Bugfix: Says files are identical after making files different in another
     application and re-loading them (#2672737)
   Bugfix: Difference pane didn't show added lines (#2710146)
